@@ -22,7 +22,6 @@ public class FileBackedTaskManager extends InMemoryTaskManager {
 
     @Override
     public int addTask(Task task) {
-        validateNoOverlap(task);
         int id = super.addTask(task);
         save();
         return id;
@@ -37,7 +36,6 @@ public class FileBackedTaskManager extends InMemoryTaskManager {
 
     @Override
     public int addSubTask(SubTask subtask) {
-        validateNoOverlap(subtask);
         int id = super.addSubTask(subtask);
         save();
         return id;
@@ -45,7 +43,6 @@ public class FileBackedTaskManager extends InMemoryTaskManager {
 
     @Override
     public boolean updateTask(Task updatedTask) {
-        validateNoOverlap(updatedTask);
         boolean result = super.updateTask(updatedTask);
         save();
         return result;
@@ -60,7 +57,6 @@ public class FileBackedTaskManager extends InMemoryTaskManager {
 
     @Override
     public boolean updateSubtask(SubTask updatedSubtask) {
-        validateNoOverlap(updatedSubtask);
         boolean result = super.updateSubtask(updatedSubtask);
         save();
         return result;
@@ -106,11 +102,16 @@ public class FileBackedTaskManager extends InMemoryTaskManager {
         try (Writer writer = new FileWriter(file)) {
             writer.write(HEADER + "\n");
 
-            for (Task task : getAllTasks()) writer.write(toString(task) + "\n");
-            for (Epic epic : getAllEpics()) writer.write(toString(epic) + "\n");
-            for (SubTask sub : getAllSubTasks()) writer.write(toString(sub) + "\n");
+            for (Task task : getAllTasks()) {
+                writer.write(toString(task) + "\n");
+            }
+            for (Epic epic : getAllEpics()) {
+                writer.write(toString(epic) + "\n");
+            }
+            for (SubTask sub : getAllSubTasks()) {
+                writer.write(toString(sub) + "\n");
+            }
 
-            writer.write(historyToString(historyManager));
         } catch (IOException e) {
             throw new ManagerSaveException("Ошибка при сохранении данных в файл: " + file.getName(), e);
         }
@@ -170,51 +171,26 @@ public class FileBackedTaskManager extends InMemoryTaskManager {
         };
     }
 
-    private String historyToString(HistoryManager manager) {
-        List<Task> history = manager.getHistory();
-        StringBuilder sb = new StringBuilder();
-        for (int i = 0; i < history.size(); i++) {
-            sb.append(history.get(i).getId());
-            if (i < history.size() - 1) sb.append(",");
-        }
-        return sb.toString();
-    }
-
-    private List<Integer> historyFromString(String value) {
-        if (value.isEmpty()) return Collections.emptyList();
-        String[] ids = value.split(",");
-        List<Integer> result = new ArrayList<>();
-        for (String s : ids) result.add(Integer.parseInt(s));
-        return result;
-    }
-
     public static FileBackedTaskManager loadFromFile(File file) {
         FileBackedTaskManager manager = new FileBackedTaskManager(file);
         try {
             List<String> lines = Files.readAllLines(file.toPath());
             if (lines.isEmpty() || lines.size() == 1) return manager;
-            lines.remove(0);
+            lines.removeFirst();
 
             int maxId = 0;
 
-            List<String> taskLines = new ArrayList<>();
-            String historyLine = "";
-
             for (String line : lines) {
                 if (line.isBlank()) continue;
-                if (line.matches("\\d+(,\\d+)*")) { // история
-                    historyLine = line;
-                } else {
-                    taskLines.add(line);
-                }
-            }
-
-            for (String line : taskLines) {
                 Task task = manager.fromString(line);
 
-                if (task instanceof Epic epic) manager.epics.put(epic.getId(), epic);
-                else if (task instanceof SubTask sub) manager.subtasks.put(sub.getId(), sub);
-                else manager.tasks.put(task.getId(), task);
+                if (task instanceof Epic epic) {
+                    manager.epics.put(epic.getId(), epic);
+                } else if (task instanceof SubTask sub) {
+                    manager.subtasks.put(sub.getId(), sub);
+                } else {
+                    manager.tasks.put(task.getId(), task);
+                }
 
                 if (task.getId() > maxId) maxId = task.getId();
             }
@@ -224,18 +200,12 @@ public class FileBackedTaskManager extends InMemoryTaskManager {
                 if (epic != null) epic.addSubtaskId(sub.getId());
             }
 
-            if (!historyLine.isBlank()) {
-                List<Integer> historyIds = manager.historyFromString(historyLine);
-                for (int id : historyIds) {
-                    Task task = manager.tasks.get(id);
-                    if (task == null) task = manager.epics.get(id);
-                    if (task == null) task = manager.subtasks.get(id);
-                    if (task != null) manager.historyManager.add(task);
-                }
+            for (Epic epic : manager.epics.values()) {
+                manager.updateEpicTime(epic);
             }
 
-            for (Task task : manager.getAllTasks()) manager.validateNoOverlap(task);
-            for (SubTask sub : manager.getAllSubTasks()) manager.validateNoOverlap(sub);
+            manager.prioritizedTasks.addAll(manager.getAllTasks());
+            manager.prioritizedTasks.addAll(manager.getAllSubTasks());
 
             manager.nextId = maxId + 1;
 
